eicOnAzureTemplates/eicOnAzureTemplates/networksecuritygroupdeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "informaticaNetworkSecurityGroupName": {
      "type": "string"
    },
    "networkSecurityGroupLocation": {
      "type": "string"
    },
    "allowedIpRange": {
      "type": "string"
    },
    "informaticaTags": {
      "type": "object"
    }
  },
  "variables": {},
  "resources": [

    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('informaticaNetworkSecurityGroupName')]",
      "apiVersion": "2018-06-01",
      "tags": {
        "displayName": "nsg",
        "provider": "[toUpper(parameters('informaticaTags').provider)]"
      },
      "location": "[parameters('networkSecurityGroupLocation')]",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-ssh",
            "properties": {
              "priority": 120,
              "sourceAddressPrefix": "*",
              "protocol": "TCP",
              "destinationPortRange": "22",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "MinMaxports",
            "properties": {
              "description": "Enabling ports required for Informatica minimum and maximum.",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "6000-7000",
              "sourceAddressPrefix": "[parameters('allowedIpRange')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "RDP",
            "properties": {
              "description": "Enabling port for RDP",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 111,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "nsgId": {
      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('informaticaNetworkSecurityGroupName'))]",
      "type": "string"
    }
  }
}
